--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -10,7 +10,7 @@
         android:icon="@android:drawable/btn_star_big_off"
         android:title="Recipe" />
     <item
-        android:id="@+id/favoritesFragment"
+        android:id="@+id/recipeFavoriteFragment"
         android:icon="@android:drawable/btn_dialog"
         android:title="Favorites" />
     <item
