--- a/app/src/main/res/layout/fragment_recipe_favorite.xml
+++ b/app/src/main/res/layout/fragment_recipe_favorite.xml
@@ -16,8 +16,34 @@
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.5" />
+        app:layout_constraintVertical_bias="0.106" />
+
+    <Button
+        android:id="@+id/button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Button"
+        tools:layout_editor_absoluteX="259dp"
+        tools:layout_editor_absoluteY="582dp" />
+
+    <ImageView
+        android:id="@+id/FavNature"
+        android:layout_width="120dp"
+        android:layout_height="138dp"
+        android:scaleType="fitXY"
+        tools:layout_editor_absoluteX="29dp"
+        tools:layout_editor_absoluteY="233dp"
+        tools:src="@tools:sample/backgrounds/scenic" />
+
+    <ImageView
+        android:id="@+id/FavSkyline"
+        android:layout_width="120dp"
+        android:layout_height="138dp"
+        android:scaleType="fitXY"
+        tools:layout_editor_absoluteX="197dp"
+        tools:layout_editor_absoluteY="233dp"
+        tools:src="@tools:sample/backgrounds/scenic" />
 </androidx.constraintlayout.widget.ConstraintLayout>
