--- a/app/src/main/res/layout/fragment_recipe_favorite.xml
+++ b/app/src/main/res/layout/fragment_recipe_favorite.xml
@@ -25,25 +25,31 @@
         android:id="@+id/button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
         android:text="Button"
-        tools:layout_editor_absoluteX="259dp"
-        tools:layout_editor_absoluteY="582dp" />
+        app:layout_constraintEnd_toEndOf="@+id/FavSkyline"
+        app:layout_constraintStart_toStartOf="@+id/FavNature"
+        app:layout_constraintTop_toBottomOf="@+id/FavSkyline" />
 
     <ImageView
         android:id="@+id/FavNature"
         android:layout_width="120dp"
         android:layout_height="138dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
         android:scaleType="fitXY"
-        tools:layout_editor_absoluteX="29dp"
-        tools:layout_editor_absoluteY="233dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView4"
         tools:src="@tools:sample/backgrounds/scenic" />
 
     <ImageView
         android:id="@+id/FavSkyline"
         android:layout_width="120dp"
         android:layout_height="138dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
         android:scaleType="fitXY"
-        tools:layout_editor_absoluteX="197dp"
-        tools:layout_editor_absoluteY="233dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView4"
         tools:src="@tools:sample/backgrounds/scenic" />
 </androidx.constraintlayout.widget.ConstraintLayout>
