--- a/app/src/main/res/layout/fragment_recipe_detail.xml
+++ b/app/src/main/res/layout/fragment_recipe_detail.xml
@@ -12,7 +12,8 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="#D6D7D7">
 
 
         <ImageView
@@ -81,11 +82,12 @@
             app:layout_constraintTop_toBottomOf="@+id/tvRezeptName" />
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/tv_ingredients"
+            android:id="@+id/rv_ingredients"
             android:layout_width="295dp"
             android:layout_height="106dp"
             android:layout_marginTop="24dp"
             android:text="Zutaten"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             app:layout_constraintBottom_toTopOf="@+id/tv_preparation"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -99,8 +101,8 @@
             android:layout_marginEnd="321dp"
             android:text="kcal"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="@+id/tv_ingredients"
-            app:layout_constraintTop_toBottomOf="@+id/tv_ingredients" />
+            app:layout_constraintStart_toStartOf="@+id/rv_ingredients"
+            app:layout_constraintTop_toBottomOf="@+id/rv_ingredients" />
 
         <TextView
             android:id="@+id/tv_carbs"
@@ -110,7 +112,7 @@
             android:layout_marginEnd="321dp"
             android:text="Kohlenhydrate"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="@+id/tv_ingredients"
+            app:layout_constraintStart_toStartOf="@+id/rv_ingredients"
             app:layout_constraintTop_toBottomOf="@+id/tv_calories" />
 
         <TextView
@@ -134,6 +136,20 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="@+id/tv_protein"
             app:layout_constraintTop_toBottomOf="@+id/tv_protein" />
+
+        <ImageButton
+            android:id="@+id/ib_fav"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="180dp"
+            android:layout_marginTop="29dp"
+            android:layout_marginEnd="183dp"
+            android:layout_marginBottom="8dp"
+            android:src="@drawable/baseline_favorite_border_24"
+            app:layout_constraintBottom_toTopOf="@+id/ivPancake"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
