--- a/app/src/main/res/layout/fragment_recipe_favorite.xml
+++ b/app/src/main/res/layout/fragment_recipe_favorite.xml
@@ -14,42 +14,23 @@
         android:textAlignment="center"
         android:textSize="60sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.106" />
+        app:layout_constraintTop_toTopOf="parent" />
 
-    <Button
-        android:id="@+id/button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rv_fav_rec"
+        android:layout_width="329dp"
+        android:layout_height="472dp"
         android:layout_marginTop="8dp"
-        android:text="Button"
-        app:layout_constraintEnd_toEndOf="@+id/FavSkyline"
-        app:layout_constraintStart_toStartOf="@+id/FavNature"
-        app:layout_constraintTop_toBottomOf="@+id/FavSkyline" />
-
-    <ImageView
-        android:id="@+id/FavNature"
-        android:layout_width="120dp"
-        android:layout_height="138dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        android:scaleType="fitXY"
+        android:layout_marginBottom="98dp"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView4"
-        tools:src="@tools:sample/backgrounds/scenic" />
+        app:layout_constraintVertical_bias="1.0"
+        tools:listitem="@layout/item_recipe" />
 
-    <ImageView
-        android:id="@+id/FavSkyline"
-        android:layout_width="120dp"
-        android:layout_height="138dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="16dp"
-        android:scaleType="fitXY"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView4"
-        tools:src="@tools:sample/backgrounds/scenic" />
 </androidx.constraintlayout.widget.ConstraintLayout>
